# phresh

./: .gitignore  docker-compose.yml  ruff.toml
backend/: .env.template  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
backend/app/api/: server.py
backend/app/api/dependencies/: auth.py  cleanings.py  evaluations.py  offers.py  users.py
backend/app/api/routes/: __init__.py  cleanings.py  evaluations.py  feed.py  offers.py  profiles.py  users.py
backend/app/core/: config.py
backend/app/db/: tasks.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/db/migrations/versions/: be82cf8b0d6f_create_main_tables.py
backend/app/db/repositories/: cleanings.py  evaluations.py  feed.py  offers.py  profiles.py  users.py
backend/app/models/: cleaning.py  core.py  evaluation.py  feed.py  offer.py  profile.py  token.py  user.py
backend/app/services/: authentication.py
backend/tests/: conftest.py  test_cleanings.py  test_evaluations.py  test_feed.py  test_offers.py  test_profiles.py  test_users.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: index.js
frontend/src/components/: index.js
frontend/src/components/App/: App.js
frontend/src/components/Carousel/: Carousel.js
frontend/src/components/CleaningJobCard/: CleaningJobCard.js
frontend/src/components/CleaningJobCreateForm/: CleaningJobCreateForm.js
frontend/src/components/CleaningJobView/: CleaningJobView.js
frontend/src/redux/: auth.js  cleanings.js  initialState.js  offers.js  rootReducer.js
frontend/src/utils/: errors.js  validation.js
(+12 files in other folders)
