[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vadim Nifadev <drcs_velde@simplelogin.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
pydantic = "^1.10.4"
email-validator = "^1.3.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
