[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vadim Nifadev <drcs_velde@simplelogin.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.4"
email-validator = "^1.3.1"
databases = {extras = ["postgresql"], version = "^0.7.0"}
alembic = "^1.9.2"
sqlalchemy = "^1.4"  # databases does not support 2.0 for now
# This should not be necessary if `asyncpg` is installed
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
httpx = "^0.23.3"
asgi-lifespan = "^2.0.0"
ruff = "^0.0.252"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
